--- a/package.json
+++ b/package.json
@@ -1,53 +1,51 @@
 {
-  "name": "insight-api",
-  "description": "A Bitcoin blockchain REST and web socket API service for Bitcore Node.",
-  "version": "5.0.0-beta.14",
-  "repository": "git://github.com/bitpay/insight-api.git",
+  "name": "lux-insight-api",
+  "description": "A LUX blockchain REST and web socket API service for Luxcore Node.",
+  "version": "0.0.23",
+  "repository": "https://github.com/216k155/insight-api.git",
+  "contributors": [],
   "bugs": {
-    "url": "https://github.com/bitpay/insight-api/issues"
+    "url": "https://github.com/216k155/insight-api/issues"
   },
-  "homepage": "https://github.com/bitpay/insight-api",
+  "homepage": "https://github.com/216k155/insight-api",
   "license": "MIT",
   "keywords": [
     "insight",
     "insight api",
     "blockchain",
-    "bitcoin api",
+    "lux api",
     "blockchain api",
     "json",
-    "bitcore"
+    "luxcore"
   ],
   "engines": {
-    "node": ">=8.2.0"
+    "node": ">=0.12.0"
   },
   "scripts": {
-    "test": "NODE_ENV=test mocha -R spec --recursive",
-    "regtest": "mocha -R spec regtest",
-    "perf": "mocha -R spec perf"
+    "test": "NODE_ENV=test mocha -R spec --recursive"
   },
   "main": "lib",
-  "bitcoreNode": "lib",
+  "luxcoreNode": "lib",
   "dependencies": {
-    "JSONStream": "^1.3.1",
     "async": "*",
-    "bcoin": "bcoin-org/bcoin#886008a1822ce1da7fa8395ee7db4bcc1750a28a",
-    "bitcore-lib": "5.0.0-beta.1",
+    "bignumber.js": "^4.0.2",
+    "bitcore-lib": "^0.13.7",
     "bitcore-message": "^1.0.1",
     "body-parser": "^1.13.3",
     "compression": "^1.6.1",
     "lodash": "^2.4.1",
     "lru-cache": "^4.0.1",
+    "moment": "^2.19.3",
+    "mongoose": "^4.11.8",
     "morgan": "^1.7.0",
-    "request": "^2.64.0"
+    "luxcore-lib": "https://github.com/216k155/luxcore-lib.git#master",
+    "request": "^2.83.0",
+    "web3": "^0.18.4"
   },
   "devDependencies": {
-    "bitcoind-rpc": "^0.7.0",
-    "bitcore-p2p": "5.0.0-beta.2",
     "chai": "^3.5.0",
-    "mkdirp": "^0.5.1",
     "mocha": "^2.4.5",
     "proxyquire": "^1.7.2",
-    "rimraf": "^2.6.1",
     "should": "^8.3.1",
     "sinon": "^1.10.3"
   }
